--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Información</a>
                     </li>
   
                     <li>
@@ -71,7 +71,6 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row"> 
-
                     <div class="col-md-8 col-md-offset-2">
                         <h2 >¡Despegamos en...!</h2>                         
                             <div id="days" id="hours" class="timer_box"></div>
@@ -90,14 +89,16 @@
 
 
     <!-- About Section -->
+	<div class="about-section">
     <section id="about" class="container content-section text-center">
-        <div class="row">
+        
             <div class="col-lg-8 col-lg-offset-2">
                 <h2 align=left>¡Os presentamos la página de nuestra boda!</h2>
                 <p class="lead" align=justify>&emsp;En ésta página encontrarás información de interés el enlace que tendrá lugar el 20 de agosto de 2016 en Ełk (pronunciado euk). En el barra de navegación superior podrás acceder a los diferentes artículos que hemos incluido. Si tenéis alguna duda o sugerencia, pinchar en Contacto para mandarnos un email. Os contestaremos a la mayor brevedad posible.</p>
             </div>
-        </div>
+        
     </section>
+	</div>
 
 
     <!-- Contact Section -->
@@ -118,7 +119,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
+            <p>Copyright &copy; Basia&hearts;Javy 2015</p>
         </div>
     </footer>
 
