--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                    <h3 id="myModalLabel"style="color:#000; font-size:120%; text-align:justify;">Nos encataría escuchar vuestras inquietudes</h3>
+                                    <h3 id="myModalLabel"style="color:#000; font-size:120%; text-align:justify;">Mándanos un mensaje</h3>
                                 </div>
                                 <div class="modal-body">
-                                    <form class="form-horizontal col-sm-12">
+                                    <form  action="http://formspree.io/your@email.com" method="POST" class="form-horizontal col-sm-12">
                                     <div class="form-group"style="color:#000"><label>Nombre</label><input class="form-control required" placeholder="Pepe Pérez" data-placement="top" data-trigger="manual" data-content="Must be at least 3 characters long, and must only contain letters." type="text">
                                     </div>
                                     <div class="form-group"style="color:#000"><label>Mensaje</label><textarea class="form-control" placeholder="Tu mensaje aquí.." data-placement="top" data-trigger="manual"></textarea></div>
