--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                     <h3 id="myModalLabel"style="color:#000; font-size:120%; text-align:justify;">Mándanos un mensaje</h3>
                                 </div>
                                 <div class="modal-body">
-                                    <form  action="http://formspree.io/your@email.com" method="POST" class="form-horizontal col-sm-12">
+                                    <form  action="http://formspree.io/soyjavy@hotmail.com" method="POST" class="form-horizontal col-sm-12">
                                     <div class="form-group"style="color:#000"><label>Nombre</label><input class="form-control required" placeholder="Pepe Pérez" data-placement="top" data-trigger="manual" data-content="Must be at least 3 characters long, and must only contain letters." type="text">
                                     </div>
                                     <div class="form-group"style="color:#000"><label>Mensaje</label><textarea class="form-control" placeholder="Tu mensaje aquí.." data-placement="top" data-trigger="manual"></textarea></div>
