--- a/index.html
+++ b/index.html
@@ -141,11 +141,10 @@
                                     <h3 id="myModalLabel"style="color:#000; font-size:120%; text-align:justify;">Mándanos un mensaje</h3>
                                 </div>
                                 <div class="modal-body">
-                                    <form  action="http://formspree.io/soyjavy@hotmail.com" method="POST" class="form-horizontal col-sm-12">
-                                    <div class="form-group"style="color:#000"><label>Nombre</label><input class="form-control required" placeholder="Pepe Pérez" data-placement="top" data-trigger="manual" data-content="Must be at least 3 characters long, and must only contain letters." type="text">
-                                    </div>
-                                    <div class="form-group"style="color:#000"><label>Mensaje</label><textarea class="form-control" placeholder="Tu mensaje aquí.." data-placement="top" data-trigger="manual"></textarea></div>
-                                    <div class="form-group"style="color:#000"><label>E-Mail</label><input class="form-control email" placeholder="ejemplo@email.com (para poder responderte)" data-placement="top" data-trigger="manual" data-content="Must be a valid e-mail address (user@gmail.com)" type="text"></div>
+                                    <form  action="http://formspree.io/soyjavy@hotmail.com" method="POST">
+                                    <label style="color:#000">Nombre</label><input placeholder="Pepe Pérez" data-trigger="manual"type="text" name="name">                                
+                                    <label style="color:#000"><br>Mensaje<br></label><textarea class="form-control" placeholder="Tu mensaje aquí.." data-placement="top" data-trigger="manual"></textarea>
+                                    <label style="color:#000">E-Mail</label><input placeholder="ejemplo@email.com (para poder responderte)" data-placement="top" data-trigger="manual" type="email" name="_replyto">
 
                                     <div class="form-group"style="color:#000"><button type="submit" class="btn btn-success pull-right">Enviar</button> <p class="help-block pull-left text-danger hide" id="form-error"style="color:#000">&nbsp; The form is not valid. </p></div>
                                     </form>
