Probando el formspree

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="row">     
                 <div class="col-md-5">           
                     <h2 align=left>¡Os presentamos la página de nuestra boda!</h2>
-                    <p class="lead" align=justify>&emsp;En ésta página encontrarás información de interés el enlace que tendrá lugar el 20 de agosto de 2016 en Ełk (pronunciado euk). En el barra de navegación superior podrás acceder a los diferentes artículos que hemos incluido. Si tenéis alguna duda o sugerencia, pinchar en Contacto para mandarnos un email. Os contestaremos a la mayor brevedad posible.</p>
+                    <p class="lead" align=justify>&emsp;En ésta página encontrarás información útil sobre nuestro enlace que tendrá lugar el 20 de agosto de 2016 en Ełk (pronunciado euk). En el barra de navegación superior podrás acceder a los diferentes artículos que hemos incluido. Si tenéis alguna duda o sugerencia, pinchar en Contacto para mandarnos un email. Os contestaremos a la mayor brevedad posible.</p>
                 </div>
 
                 <div class="col-md-1">
@@ -142,8 +142,8 @@
                                 </div>
                                 <div class="modal-body">
                                     <form  action="http://formspree.io/soyjavy@hotmail.com" method="POST">
-                                    <label style="color:#000">Nombre</label><input placeholder="Pepe Pérez" data-trigger="manual"type="text" name="name">                                
-                                    <label style="color:#000"><br>Mensaje<br></label><textarea class="form-control" placeholder="Tu mensaje aquí.." data-placement="top" data-trigger="manual"></textarea>
+                                    <label style="color:#000">Nombre</label><input placeholder="Pepe Pérez" data-trigger="manual"type="text" name="name" style="color:#000">                                
+                                    <label style="color:#000"><br>Mensaje<br></label><textarea class="form-control" placeholder="Tu mensaje aquí.." data-placement="top" data-trigger="manual" name="name"></textarea>
                                     <label style="color:#000">E-Mail</label><input placeholder="ejemplo@email.com (para poder responderte)" data-placement="top" data-trigger="manual" type="email" name="_replyto">
 
                                     <div class="form-group"style="color:#000"><button type="submit" class="btn btn-success pull-right">Enviar</button> <p class="help-block pull-left text-danger hide" id="form-error"style="color:#000">&nbsp; The form is not valid. </p></div>
