--- a/index.html
+++ b/index.html
@@ -138,19 +138,37 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                    <h3 id="myModalLabel"style="color:#000; font-size:120%; text-align:justify;">Mándanos un mensaje</h3>
+                                    <h3 id="myModalLabel"style="color:#000; text-align:justify;">Mándanos un mensaje</h3>
                                 </div>
                                 <div class="modal-body">
-                                    <form  action="http://formspree.io/soyjavy@hotmail.com" method="POST">
-                                    <label style="color:#000">Nombre</label><input placeholder="Pepe Pérez" data-trigger="manual"type="text" name="name" style="color:#000">                                
-                                    <label style="color:#000"><br>Mensaje<br></label><textarea class="form-control" placeholder="Tu mensaje aquí.." data-placement="top" data-trigger="manual" name="name"></textarea>
-                                    <label style="color:#000">E-Mail</label><input placeholder="ejemplo@email.com (para poder responderte)" data-placement="top" data-trigger="manual" type="email" name="_replyto">
+                                    <form role="form" action="http://formspree.io/soyjavy@hotmail.com" method="POST">
+                                    <div class="form-group">
+                                        <label class="control-label" for="email" style="color:#000">
+                                            <h4>Nombre</h4>
+                                        </label>                                        
+                                        <input class="form-control" placeholder="Pepe Pérez" data-trigger="manual"type="text" name="name" style="color:#000">                                    
 
-                                    <div class="form-group"style="color:#000"><button type="submit" class="btn btn-success pull-right">Enviar</button> <p class="help-block pull-left text-danger hide" id="form-error"style="color:#000">&nbsp; The form is not valid. </p></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label" style="color:#000" for="comment">
+                                            <h4>Mensaje</h4>
+                                        </label>  
+                                        <textarea class="form-control" placeholder="Tu mensaje aquí.." data-placement="top" data-trigger="manual" name="name"rows="3" id="comment"></textarea>
+
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label  class="form-control" style="color:#000">
+                                            <h4>E-Mail</h4>
+                                        </label>                                        
+                                        <input class="form-control" placeholder="ejemplo@email.com (para poder responderte)" data-placement="top" data-trigger="manual" type="email" name="_replyto">                               
+                                    </div>
+
+                                        <div class="form-group"style="color:#000"><button type="submit" class="btn btn-success pull-right">Enviar</button> <p class="help-block pull-left text-danger hide" id="form-error"style="color:#000">&nbsp; The form is not valid. </p></div>
                                     </form>
                                 </div>
                                 <div class="modal-footer">
-                                    <button style="color:#FF0000" class="btn" data-dismiss="modal" aria-hidden="true">Cancelar</button>
+                                    <button style="color:#fff" class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Cancelar</button>
                                 </div>
                             </div>
                         </div>
