Google maps added

--- a/index.html
+++ b/index.html
@@ -104,8 +104,11 @@
     <section class="container content-section text-center">
             <div class="row">     
                 <div class="col-md-5">           
-                    <h2 align=left>¡Os presentamos la página de nuestra boda!</h2>
-                    <p class="lead" align=justify>&emsp;En ésta página encontrarás información útil sobre nuestro enlace que tendrá lugar el 20 de agosto de 2016 en Ełk (pronunciado euk). En el barra de navegación superior podrás acceder a los diferentes artículos que hemos incluido. Si tenéis alguna duda o sugerencia, pinchar en Contacto para mandarnos un email. Os contestaremos a la mayor brevedad posible.</p>
+                    <h2 align=left>¡QUERIDOS INVITADOS, OS PRESENTAMOS LA PÁGINA DE NUESTRA BODA!</h2>
+                    <p class="lead" align=justify>&emsp;Esta página ha sido creada para toda la famila y amigos con quien queremos compartir la felicidad de un día tan importante como este, nuestro enlace, 
+                    el cual tendrá lugar el 20 de agosto de <b>2016 en Ełk (pronunciado euk).</b>
+                    <br>&emsp;En ésta página encontraréis información de interés que esperamos sea de utilidad para vosotros. En el barra de navegación superior podéis acceder a los diferentes artículos que hemos incluido. Si tenéis alguna pregunta, duda y/o sugerencia, pinchar en <b><i>Contacto</i></b> para mandarnos un email. Os contestaremos a la mayor brevedad posible. 
+                    </p>
                 </div>
 
                 <div class="col-md-1">
@@ -113,8 +116,10 @@
                 </div>
 
                 <div class="col-md-5">
-                    <h2 align=left>¡Os presentamos la página de nuestra boda!</h2>
-                    <p class="lead" align=justify>&emsp;En ésta página encontrarás información de interés el enlace que tendrá lugar el 20 de agosto de 2016 en Ełk (pronunciado euk). En el barra de navegación superior podrás acceder a los diferentes artículos que hemos incluido. Si tenéis alguna duda o sugerencia, pinchar en Contacto para mandarnos un email. Os contestaremos a la mayor brevedad posible.</p>
+                    <h2 align=left>DRODZY GOŚCIE, PRZEDSTAWIAMY WAM NASZĄ STRONĘ ŚLUBNĄ!</h2>
+                    <p class="lead" align=justify>&emsp;Kochani, strona za została stworzona z myślą o Was, o naszej rodzinie i przyjaciołach, o naszych bliskich, bo to z Wami chcemy dzielić się radością tego ważnego dla nas dnia, który będzie miał miejsce <b>20 sierpnia 2016 roku w Ełku. </b>
+                    <br>&emsp;W górnym pasku nawigacyjnym strony znajdziecie dostęp do wszystkich przydatnych według nas informacji. Jeśli macie pytania, wątpliwości i/lub sugestie, możecie do nas napisać poprzez zakładkę <b><i>Kontakt</i></b>, za pomocą której można wysłać do nas zapytanie. Obiecujemy odpowiedzieć szybko na Wasze maile. 
+                    </p>
                 </div>
             </div>              
     </section>
@@ -127,7 +132,7 @@
             <div class="row">     
                 <div class="col-md-5">           
                     <h2 align=left>Mándanos un email</h2>
-                    <p align=justify>&emsp;Estamos aquí para ayudar. Si tienes alguna pregunta o duda pincha aquí para enviarnos un correo electrónico</p>
+                    <p align=justify>&emsp;Estamos aquí para ayudar. Si tenéis alguna pregunta o duda pincha aquí para enviarnos un correo electrónico.</p>
 
 
                     <!-- forma de contacto                                mi boton para español-->
@@ -182,8 +187,8 @@
                 </div>
                 
                 <div class="col-md-5">
-                    <h2 align=left>Mándanos un email</h2>
-                    <p align=justify>&emsp;Estamos aquí para ayudar. Si tienes alguna pregunta pincha encima de nuestros nombres :D</p>
+                    <h2 align=left>WYŚLIJ DO NAS ZAPYTANIE</h2>
+                    <p align=justify>&emsp;Jesteśmy do Waszej dyspozycji. Jeśli macie pytania lub wątpliwości, kliknijcie poniżej, aby wysłać e-mail.</p>
                 </div>
             </div>  
 
@@ -191,12 +196,13 @@
     </div>
 
     <!-- Map Section -->
-    <div id="map"></div>
-
+     <div class="col-md-12" align="center">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d570418.0600689763!2d22.161575044742293!3d53.723767456843525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e1b97f3761e307%3A0x5341066a14824162!2sElk%2C+Poland!5e0!3m2!1sen!2ses!4v1453066116332"  width=100% height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Basia&hearts;Javy 2015</p>
+            <p>Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2015</p>
         </div>
     </footer>
 
