--- a/evento.html
+++ b/evento.html
@@ -70,7 +70,7 @@
     </nav>
 
 
-    <header class="intro-header" style="background-image: url('img/intro-bg.JPG')">
+    <header class="intro-header" style="background-image: url('img/boda_2.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
