--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                 <div class="col-md-5">
                     <h2 align=left>DRODZY GOŚCIE, PRZEDSTAWIAMY WAM NASZĄ STRONĘ ŚLUBNĄ!</h2>
-                    <p class="lead" align=justify>&emsp;Kochani, strona za została stworzona z myślą o Was, o naszej rodzinie i przyjaciołach, o naszych bliskich, bo to z Wami chcemy dzielić się radością tego ważnego dla nas dnia, który będzie miał miejsce <b>20 sierpnia 2016 roku w Ełku. </b>
+                    <p class="lead" align=justify>&emsp;Kochani, strona ta została stworzona z myślą o Was, o naszej rodzinie i przyjaciołach, o naszych bliskich, bo to z Wami chcemy dzielić się radością tego ważnego dla nas dnia, który będzie miał miejsce <b>20 sierpnia 2016 roku w Ełku. </b>
                     <br>&emsp;W górnym pasku nawigacyjnym strony znajdziecie dostęp do wszystkich przydatnych według nas informacji. Jeśli macie pytania, wątpliwości i/lub sugestie, możecie do nas napisać poprzez zakładkę <b><i>Kontakt</i></b>, za pomocą której można wysłać do nas zapytanie. Obiecujemy odpowiedzieć szybko na Wasze maile. 
                     </p>
                 </div>
@@ -163,7 +163,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label  class="form-control" style="color:#000">
+                                        <label  class="control-label" style="color:#000">
                                             <h4>E-Mail</h4>
                                         </label>                                        
                                         <input class="form-control" placeholder="ejemplo@email.com (para poder responderte)" data-placement="top" data-trigger="manual" type="email" name="_replyto">                               
@@ -197,8 +197,9 @@
 
     <!-- Map Section -->
      <div class="col-md-12" align="center">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d570418.0600689763!2d22.161575044742293!3d53.723767456843525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e1b97f3761e307%3A0x5341066a14824162!2sElk%2C+Poland!5e0!3m2!1sen!2ses!4v1453066116332"  width=100% height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d570418.0600689763!2d22.161575044742293!3d53.723767456843525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e1b97f3761e307%3A0x5341066a14824162!2sElk%2C+Poland!5e0!3m2!1sen!2ses!4v1453066116332"  width=100% height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
+
     <!-- Footer -->
     <footer>
         <div class="container text-center">
@@ -206,6 +207,7 @@
         </div>
     </footer>
 
+    <!-- Loading scripts-->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
