La página principal tiene ahora polaco y español. El contador de tiempo está cambiado para no liarla mucho con Dni, dzien, godzin, godzinę y toda la pesca

--- a/index.html
+++ b/index.html
@@ -52,16 +52,17 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Introducción</a>
+                        <a class="page-scroll" href="#about">Introducción<br>Wstęp</a>
                     </li>
   
                     <li>
-                        <a class="page-scroll" href="#contact">Contacto</a>
+                        <a class="page-scroll" href="#contact">Contacto<br>KONTAKT</a>
                     </li>
                 
 
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" role="button">Enlaces <span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" role="button">Enlaces <br>LINKI INFORMACYJNE
+<span class="caret"></span></a>
                         <ul  class="dropdown-menu">
                             <li><a href="evento.html">El evento</a></li>
                             <!--  <li><a href="#">Another action</a></li> -->
@@ -82,8 +83,8 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row"> 
-                    <div class="col-md-8 col-md-offset-2">
-                        <h2 >¡Despegamos en...!</h2>                         
+                    <div class="col-md-8 col-md-offset-2">                        
+                        <h2> Despegamos en...</h2><h2>Startujemy za ...</h2>                         
                             <div id="days" id="hours" class="timer_box"></div>
                             <div id="hours" class="timer_box"></div>
                             <div id="minutes" class="timer_box"></div>
@@ -164,7 +165,7 @@
 
                                     <div class="form-group">
                                         <label  class="control-label pull-left" style="color:#000" >E-Mail</label>                                        
-                                        <input class="form-control" placeholder="ejemplo@email.com (para poder responderte)" data-placement="top" data-trigger="manual" type="email" name="_replyto"required>                               
+                                        <input class="form-control" placeholder="ejemplo@email.com (para poder responderte)" data-placement="top" data-trigger="manual" type="email" name="_replyto" required>                               
                                     </div>
 
                                         <div class="form-group" style="color:#000">
@@ -197,28 +198,28 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:#f00">x</button>
-                                    <h3 id="myModalLabel"style="color:#000; text-align:justify;">Mándanos un mensaje</h3>
+                                    <h3 id="myModalLabel"style="color:#000; text-align:justify;">Wyślij wiadomość</h3>
                                 </div>
                                 <div class="modal-body">
                                     <form role="form" action="http://formspree.io/cspline3d@gmail.com" method="POST">
                                     <div class="form-group">
-                                        <label class="control-label pull-left" for="email" style="color:#000">Nombre</label>                                        
-                                        <input class="form-control" placeholder="Pepe Pérez" data-trigger="manual"type="text" name="name" style="color:#000">                                    
+                                        <label class="control-label pull-left" for="email" style="color:#000">Imię</label>                                        
+                                        <input class="form-control" placeholder="Jan Kowalski" data-trigger="manual"type="text" name="name" style="color:#000" required>                                    
 
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label pull-left" style="color:#000" for="comment">Mensaje</label>  
-                                        <textarea class="form-control" placeholder="Tu mensaje aquí.." data-placement="top" data-trigger="manual" name="name"rows="3" id="comment"></textarea>
+                                        <label class="control-label pull-left" style="color:#000" for="comment">Wiadomość</label>  
+                                        <textarea class="form-control" placeholder="Tutaj napisz do nas" data-placement="top" data-trigger="manual" name="name"rows="3" id="comment" required></textarea>
 
                                     </div>
 
                                     <div class="form-group">
                                         <label  class="control-label pull-left" style="color:#000">E-Mail</label>                                        
-                                        <input class="form-control" placeholder="ejemplo@email.com (para poder responderte)" data-placement="top" data-trigger="manual" type="email" name="_replyto">                               
+                                        <input class="form-control" placeholder="jankowalski@email.com (żebysmy mogli odpowiedzieć na Twojego e-maila)" data-placement="top" data-trigger="manual" type="email" name="_replyto" required>                               
                                     </div>
 
                                         <div class="form-group" style="color:#000">
-                                            <button style="color:#fff" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true">Cancelar</button>  
+                                            <button style="color:#fff" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true">Anuluj</button>  
                                             <button type="submit" class="btn btn-success pull-right">Wyślij</button>                                    
 
                                         </div>
