--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
+                <a class="navbar-brand page-scroll" href="#page-top" >
                       <span class="light">Basia</span><span style="color:red">&hearts;</span>Javy
                 </a>
             </div>
@@ -84,7 +84,7 @@
             <div class="container">
                 <div class="row"> 
                     <div class="col-md-8 col-md-offset-2">                        
-                        <h2> Despegamos en...</h2><h2>Startujemy za ...</h2>                         
+                        <h1 font-size:18px> Despegamos en...</h1><h1>Startujemy za ...</h1>                         
                             <div id="days" id="hours" class="timer_box"></div>
                             <div id="hours" class="timer_box"></div>
                             <div id="minutes" class="timer_box"></div>
@@ -152,6 +152,12 @@
                                 </div>
                                 <div class="modal-body">
                                     <form role="form" action="http://formspree.io/soyjavy@hotmail.com" method="POST">
+                                                                       
+                                    <!-- To avoid spam-->
+                                    <div>
+                                        <input type="text" name="_gotcha" style="display:none" />
+                                    </div>
+
                                     <div class="form-group">
                                         <label class="control-label pull-left" for="email" style="color:#000">Nombre</label>                                        
                                         <input class="form-control" placeholder="Pepe Pérez" data-trigger="manual"type="text" name="name" style="color:#000" required>                                    
@@ -167,10 +173,9 @@
                                         <label  class="control-label pull-left" style="color:#000" >E-Mail</label>                                        
                                         <input class="form-control" placeholder="ejemplo@email.com (para poder responderte)" data-placement="top" data-trigger="manual" type="email" name="_replyto" required>                               
                                     </div>
-
                                         <div class="form-group" style="color:#000">
                                             <button style="color:#fff" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true">Cancelar</button>  
-                                            <button type="submit" class="btn btn-success pull-right">Enviar</button>                                    
+                                            <button type="submit" class="btn btn-success pull-right">Enviar</button>                                  
 
                                         </div>
                                     </form>
@@ -201,7 +206,12 @@
                                     <h3 id="myModalLabel"style="color:#000; text-align:justify;">Wyślij wiadomość</h3>
                                 </div>
                                 <div class="modal-body">
-                                    <form role="form" action="http://formspree.io/cspline3d@gmail.com" method="POST">
+                                    <form role="form" action="http://formspree.io/soyjavy@hotmail.com" method="POST">
+                                    <!-- To avoid spam-->
+                                    <div>
+                                        <input type="text" name="_gotcha" style="display:none" />
+                                    </div>
+
                                     <div class="form-group">
                                         <label class="control-label pull-left" for="email" style="color:#000">Imię</label>                                        
                                         <input class="form-control" placeholder="Jan Kowalski" data-trigger="manual"type="text" name="name" style="color:#000" required>                                    
