--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
    <!-- Custom CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
+    <!-- toastr CSS-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet"/>
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -174,10 +177,13 @@
                                         <input class="form-control" placeholder="ejemplo@email.com (para poder responderte)" data-placement="top" data-trigger="manual" type="email" name="_replyto" required>                               
                                     </div>
                                         <div class="form-group" style="color:#000">
-                                            <button style="color:#fff" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true">Cancelar</button>  
+                                            <button id="linkButton" style="color:#fff" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true">Cancelar</button>  
                                             <button type="submit" class="btn btn-success pull-right">Enviar</button>                                  
 
                                         </div>
+                                        <!-- Avoiding redirect from fromspree-->
+                                        <input type="hidden" name="_next" value="//website.com/thanks.html"/>
+
                                     </form>
                                 </div>
 
@@ -229,10 +235,11 @@
                                     </div>
 
                                         <div class="form-group" style="color:#000">
-                                            <button style="color:#fff" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true">Anuluj</button>  
-                                            <button type="submit" class="btn btn-success pull-right">Wyślij</button>                                    
-
+                                            <button style="color:#fff" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true" >Anuluj</button>  
+                                            <button type="submit" class="btn btn-success pull-right"  id="showtoast">Wyślij</button> 
                                         </div>
+                                        <!-- Avoiding redirect from fromspree-->
+                                        <input type="hidden" name="_next" value="//website.com/thanks.html"/>
                                     </form>
                                 </div>
 
@@ -255,7 +262,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2015</p>
+            <p>Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2016</p>
         </div>
     </footer>
 
@@ -269,12 +276,12 @@
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
 
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
-
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
     <script src="js/custom.js"></script>
+
+
+
 
 </body>
 
