--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
                                         </div>
                                         <!-- Avoiding redirect from fromspree-->
-                                        <input type="hidden" name="_next" value="//website.com/thanks.html"/>
+                                        <input type="hidden" name="_next" value="thanks.html"/>
 
                                     </form>
                                 </div>
@@ -239,7 +239,7 @@
                                             <button type="submit" class="btn btn-success pull-right"  id="showtoast">Wyślij</button> 
                                         </div>
                                         <!-- Avoiding redirect from fromspree-->
-                                        <input type="hidden" name="_next" value="//website.com/thanks.html"/>
+                                        <input type="hidden" name="_next" value="thanks.html"/>
                                     </form>
                                 </div>
 
