Resizing font according the vertical viewport

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="container">
                 <div class="row"> 
                     <div class="col-md-8 col-md-offset-2">                        
-                        <h1 font-size:18px> Despegamos en...</h1><h1>Startujemy za ...</h1>                         
+                        <h1> Despegamos en...</h1><h1>Startujemy za ...</h1>                         
                             <div id="days" id="hours" class="timer_box"></div>
                             <div id="hours" class="timer_box"></div>
                             <div id="minutes" class="timer_box"></div>
