--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     </li>
                 
 
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" role="button">Enlaces <br>LINKI INFORMACYJNE
-<span class="caret"></span></a>
+                    <li>
+                        <a data-toggle="dropdown" role="button">Enlaces <br>LINKI INFORMACYJNE
+                        <span class="caret"></span></a>
                         <ul  class="dropdown-menu">
                             <li><a href="evento.html">El evento</a></li>
                             <!--  <li><a href="#">Another action</a></li> -->
@@ -93,7 +93,8 @@
                             <div id="minutes" class="timer_box"></div>
                             <div id="seconds" class="timer_box"></div>              
                     </div>                               
-                    <div class="col-md-8 col-md-offset-2"> <a href="#about" class="btn btn-circle page-scroll">
+                    <div class="col-md-8 col-md-offset-2"> 
+                        <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div> 
@@ -182,7 +183,7 @@
 
                                         </div>
                                         <!-- Avoiding redirect from fromspree-->
-                                        <input type="hidden" name="_next" value="thanks.html"/>
+                                        <input type="hidden" name="_next" value="thanks_es.html"/>
 
                                     </form>
                                 </div>
@@ -239,7 +240,7 @@
                                             <button type="submit" class="btn btn-success pull-right"  id="showtoast">Wyślij</button> 
                                         </div>
                                         <!-- Avoiding redirect from fromspree-->
-                                        <input type="hidden" name="_next" value="thanks.html"/>
+                                        <input type="hidden" name="_next" value="thanks_es.html"/>
                                     </form>
                                 </div>
 
