Navbar fixed top when < 768

--- a/evento.html
+++ b/evento.html
@@ -40,7 +40,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="index.html" >
-                      <span class="light">Basia</span><span style="color:red">&hearts;</span>Javy
+                      <span class="light"><i class="fa fa-home"></i>Basia</span><span style="color:red">&hearts;</span>Javy
                 </a>
             </div>
 
@@ -87,7 +87,7 @@
         <!-- /.container -->
     </nav>
 
-    <header class="intro-header" style="background-image: url('img/boda_2.jpg')">
+    <header class="intro-header article_image" style="background-image: url('img/boda_2.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -109,9 +109,10 @@
                      
                     <p> <b>Si no tienes muchas ganas de leer, pincha en la flecha para ir a los consejos básicos durante la fiesta </b>               
 
-                        <a href="#consejos" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated gray_with_black_stroke"></i>
+                        <a href="#consejos" class="btn btn-circle page-scroll" style="border-color:black">
+                            <i style="color:black" class="fa fa-angle-double-down  animated "></i>
                         </a>
+
                     </p>     
                     <h2 class="gray_with_black_stroke">INTRODUCCIÓN</h2>
 
@@ -206,7 +207,7 @@
     <footer>
         <div class="container text-center">
             <a id="footer_articles" class="page-scroll" href="#page-top" >
-                <p>Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2016</p>
+                <p >Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2016 <i class="fa fa-angle-double-up"></i></p>
             </a>
         </div>
     </footer>
