--- a/thanks_es.html
+++ b/thanks_es.html
@@ -56,7 +56,7 @@
 
                         </div>
                         <div class="col-md-8 col-md-offset-2">
-                            <a href="index.html" class="btn btn-circle page-scroll">
+                            <a href="index.html" class="btn btn-circle">
                                 <i class="fa fa-angle-double-left animated"></i>
                             </a>
                         </div>
