--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
 
     <meta charset="utf-8">
@@ -8,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Historias de una Boda en Polonia</title>
 
@@ -34,7 +36,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-custom navbar-fixed-top " role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
@@ -46,7 +48,7 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div  class="collapse navbar-collapse navbar-right navbar-main-collapse">
+            <div  class="collapse navbar-collapse navbar-right navbar-main-collapse ">
 
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
@@ -54,7 +56,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll force_collapse" href="#about">Introducción<br>Wstęp</a>
+                        <a  class="page-scroll force_collapse" href="#about">Introducción<br>Wstęp</a>
                     </li>
 
                     <li>
@@ -276,7 +278,7 @@
     <footer>
         <div class="container text-center">
             <a id="footer" class="page-scroll" href="#page-top" >
-                <p >Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2016</p>
+                <p >Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2016 <i class="fa fa-angle-double-up animated "></i></p>
             </a>
         </div>
     </footer>
@@ -294,7 +296,6 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
     <script src="js/custom.js"></script>
-
 
 
 
