testing some parameter in my cell

--- a/evento.html
+++ b/evento.html
@@ -102,14 +102,14 @@
 
 
 
-    <article  style="background-color:#fff;" class="article-body">
+    <article  class="article-body">
         <div class="container">
             <div class="row">
                 <div class="text-justify" style="color:#000;"class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">  
                      
                     <p> <b>Si no tienes muchas ganas de leer, pincha en la flecha para ir a los consejos básicos durante la fiesta </b>               
 
-                        <a href="#consejos" class="btn btn-circle page-scroll" style="border-color:black">
+                        <a href="#consejos" class="btn btn-circle page-scroll" style="border-color:black  height:50px">
                             <i style="color:black" class="fa fa-angle-double-down  animated "></i>
                         </a>
 
