--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <footer>
         <div class="container text-center">
             <a id="footer" class="page-scroll" href="#page-top" >
-                <p >Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2016 <i class="fa fa-angle-double-up animated "></i></p>
+                <p >Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2016 <i class="fa fa-angle-double-up"></i></p>
             </a>
         </div>
     </footer>
