--- a/evento.html
+++ b/evento.html
@@ -102,7 +102,7 @@
 
 
 
-    <article  class="article-body">
+    <article  style="background-color:#fff;" class="article-body">
         <div class="container">
             <div class="row">
                 <div class="text-justify" style="color:#000;"class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">  
