--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Web dedicada a la boda polaca de Basia y Javy. Aquí encontrarás información de interes referente al evento del 20.08.16">
+    <meta name="author" content="Javier Oliver">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Historias de una Boda en Polonia</title>
