--- a/thanks_es.html
+++ b/thanks_es.html
@@ -6,9 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
+    <meta name="description" content="Web dedicada a la boda polaca de Basia y Javy. Gracias por tu email">
+    <meta name="author" content="Javier Oliver">
     <title>Historias de una Boda en Polonia</title>
 
     <!-- Bootstrap Core CSS -->
