--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <h2 align=left>¡QUERIDOS INVITADOS, OS PRESENTAMOS LA PÁGINA DE NUESTRA BODA!</h2>
-                    <p class="lead" align=justify>&emsp;Esta página ha sido creada para toda la famila y amigos con quien queremos compartir la felicidad de un día tan importante como este, nuestro enlace,
+                    <p class="lead" align=left>&emsp;Esta página ha sido creada para toda la famila y amigos con quien queremos compartir la felicidad de un día tan importante como este, nuestro enlace,
                     el cual tendrá lugar el 20 de agosto de <b>2016 en Ełk (pronunciado euk).</b>
                     <br>&emsp;En ésta página encontraréis información de interés que esperamos sea de utilidad para vosotros. En el barra de navegación superior podéis acceder a los diferentes artículos que hemos incluido. Si tenéis alguna pregunta, duda y/o sugerencia, pinchar en <b><i>Contacto</i></b> para mandarnos un email. Os contestaremos a la mayor brevedad posible.
                     </p>
@@ -136,7 +136,7 @@
 
                 <div class="col-md-5">
                     <h2 align=left>DRODZY GOŚCIE, PRZEDSTAWIAMY WAM NASZĄ STRONĘ ŚLUBNĄ!</h2>
-                    <p class="lead" align=justify>&emsp;Kochani, strona ta została stworzona z myślą o Was, o naszej rodzinie i przyjaciołach, o naszych bliskich, bo to z Wami chcemy dzielić się radością tego ważnego dla nas dnia, który będzie miał miejsce <b>20 sierpnia 2016 roku w Ełku. </b>
+                    <p class="lead" align=left>&emsp;Kochani, strona ta została stworzona z myślą o Was, o naszej rodzinie i przyjaciołach, o naszych bliskich, bo to z Wami chcemy dzielić się radością tego ważnego dla nas dnia, który będzie miał miejsce <b>20 sierpnia 2016 roku w Ełku. </b>
                     <br>&emsp;W górnym pasku nawigacyjnym strony znajdziecie dostęp do wszystkich przydatnych według nas informacji. Jeśli macie pytania, wątpliwości i/lub sugestie, możecie do nas napisać poprzez zakładkę <b><i>Kontakt</i></b>, za pomocą której można wysłać do nas zapytanie. Obiecujemy odpowiedzieć szybko na Wasze maile.
                     </p>
                 </div>
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <h2 align=left>Mándanos un email</h2>
-                    <p align=justify>&emsp;Estamos aquí para ayudar. Si tenéis alguna pregunta o duda pincha aquí para enviarnos un correo electrónico.</p>
+                    <p align=left>&emsp;Estamos aquí para ayudar. Si tenéis alguna pregunta o duda pincha aquí para enviarnos un correo electrónico.</p>
 
 
                     <!-- forma de contacto                                mi boton para español-->
@@ -166,7 +166,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:#f00">x</button>
-                                    <h3 id="myModalLabel"style="color:#000; text-align:justify;">Mándanos un mensaje</h3>
+                                    <h3 id="myModalLabel" style="color:#000; text-align:left;">Mándanos un mensaje</h3>
                                 </div>
                                 <div class="modal-body">
                                     <form role="form" action="http://formspree.io/soyjavy@hotmail.com" method="POST">
@@ -215,7 +215,7 @@
 
                 <div class="col-md-5">
                     <h2 align=left>Wyślij do nas zapytanie</h2>
-                    <p align=justify>&emsp;Jesteśmy do Waszej dyspozycji. Jeśli macie pytania lub wątpliwości, kliknijcie poniżej, aby wysłać e-mail.</p>
+                    <p align=left>&emsp;Jesteśmy do Waszej dyspozycji. Jeśli macie pytania lub wątpliwości, kliknijcie poniżej, aby wysłać e-mail.</p>
                      <!-- forma de contacto                                polaco-->
                     <div class="row"><h1 class="text-center"><a href="#myModal2" role="button" class="btn btn-primary btn-lg" data-toggle="modal">Kontakt</a></h1></div>
 
@@ -224,7 +224,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:#f00">x</button>
-                                    <h3 id="myModalLabel"style="color:#000; text-align:justify;">Wyślij wiadomość</h3>
+                                    <h3 id="myModalLabel"style="color:#000; text-align:left;">Wyślij wiadomość</h3>
                                 </div>
                                 <div class="modal-body">
                                     <form role="form" action="http://formspree.io/soyjavy@hotmail.com" method="POST">
