Added, slub po hiszpansku, more aesthetics

--- a/pages/evento.html
+++ b/pages/evento.html
@@ -12,13 +12,13 @@
     <title>Tradición de la boda Polaca</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
    <!-- Custom CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
+    <link href="../css/grayscale.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,8 +39,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="index.html" >
-                      <span class="light"><i class="fa fa-home"></i>Basia</span><span style="color:red">&hearts;</span>Javy
+                <a class="navbar-brand page-scroll" href="../index.html" >
+                      <span class="light"><i class="fa fa-home"></i>Basia</span><span style="color:black">&hearts;</span>Javy
                 </a>
             </div>
 
@@ -53,13 +53,13 @@
                         <a href="#page-top"></a>
                     </li>
                     
-                    <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Enlaces
-                        <span class="caret"></span></a>
+                   <li>
+                        <a id="enlaces" data-toggle="dropdown" role="button">Enlaces<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
+                            <li><a class="links" href="evento.html">El Evento</a></li>
                             <li><a class="links" href="boda-polaca.html">¿Una Boda Polaca?</a></li>
-                            <li><a class="links" href="peluqueria.html">Peluqueria</a></li>
+                            <li><a class="links" href="peluqueria.html">Peluquería</a></li>
                             <!-- <li><a href="#">Something else here</a></li> -->
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
@@ -68,12 +68,12 @@
 
                     <!-- PL-->
                      <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button">Linki <br> Informacyjne
-                        <span class="caret"></span></a>
+                        <a id="enlaces" data-toggle="dropdown" role="button">Linki<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
-                            <li><a class="links" href="evento.html">El evento</a></li>
-                            <!--  <li><a href="#">Another action</a></li> -->
+                            <li><a class="links" href="evento.html">Wydarzenie</a></li>         
+                            <li><a class="links" href="slub.html">Ślub po Hiszpańsku</a></li>
+                            <li><a class="links" href="peluqueria.html">Fryzjer</a></li>
                             <!-- <li><a href="#">Something else here</a></li> -->
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
@@ -87,7 +87,7 @@
         <!-- /.container -->
     </nav>
 
-    <header class="intro-header article_image" style="background-image: url('img/boda_2.jpg')">
+    <header class="intro-header article_image" style="background-image: url('../img/evento.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -105,7 +105,7 @@
     <article  style="background-color:#fff;" class="article-body">
         <div class="container">
             <div class="row">
-                <div class="text-justify" style="color:#000;"class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">  
+                <div class="text_align_mobile" style="color:#000;"class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">  
                      
                 </div>
             </div>
@@ -123,19 +123,19 @@
 
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
+    <script src="../js/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
     <!-- Este script tiene algún tipo de bug con los dropdown menus-->
-    <script src="js/grayscale.js"></script>
+    <script src="../js/grayscale.js"></script>
 
 </body>
 
