--- a/pages/peluqueria.html
+++ b/pages/peluqueria.html
@@ -12,13 +12,13 @@
     <title>Peluquería / Fryzjer</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
    <!-- Custom CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
+    <link href="../css/grayscale.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,7 +39,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="index.html" >
+                <a class="navbar-brand page-scroll" href="../index.html" >
                       <span class="light"><i class="fa fa-home"></i>Basia</span><span style="color:red">&hearts;</span>Javy
                 </a>
             </div>
@@ -53,13 +53,13 @@
                         <a href="#page-top"></a>
                     </li>
                     
-                    <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Enlaces
-                        <span class="caret"></span></a>
+                   <li>
+                        <a id="enlaces" data-toggle="dropdown" role="button">Enlaces<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
+                            <li><a class="links" href="evento.html">El Evento</a></li>
                             <li><a class="links" href="boda-polaca.html">¿Una Boda Polaca?</a></li>
-                            <li><a class="links" href="peluqueria.html">Peluqueria</a></li>
+                            <li><a class="links" href="peluqueria.html">Peluquería</a></li>
                             <!-- <li><a href="#">Something else here</a></li> -->
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
@@ -68,12 +68,12 @@
 
                     <!-- PL-->
                      <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button">Linki <br> Informacyjne
-                        <span class="caret"></span></a>
+                        <a id="enlaces" data-toggle="dropdown" role="button">Linki<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
-                            <li><a class="links" href="evento.html">El evento</a></li>
-                            <!--  <li><a href="#">Another action</a></li> -->
+                            <li><a class="links" href="evento.html">Wydarzenie</a></li>         
+                            <li><a class="links" href="slub.html">Ślub po Hiszpańsku</a></li>
+                            <li><a class="links" href="peluqueria.html">Fryzjer</a></li>
                             <!-- <li><a href="#">Something else here</a></li> -->
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
@@ -87,13 +87,13 @@
         <!-- /.container -->
     </nav>
 
-    <header class="intro-header article_image" style="background-image: url('img/boda_2.jpg')">
+    <header class="intro-header article_image" style="background-image: url('../img/peluqueria.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading white_with_black_stroke">
-                        <h2>¿Necistas peluquería?</h2>
-                        <h2>tu po polsku, nie wiem</h2>
+                        <h2>¿Necistas peluquería para la boda?</h2>
+                        <h2>Chcesz uczesać się na wesele? </h2>
                     </div>
                 </div>
             </div>
@@ -109,14 +109,14 @@
                      
                 <div class="row">
                     <div class="col-md-5">
-                       <p>&emsp;Hay posibilidad de coger cita para peinarse el día de nuestra boda. Si deseas ir a la peluquería, avísanos por email o bien llámanos personalmente al número que aparece en la invitación</p>
+                       <p>&emsp;Hay posibilidad de pedir cita para peinarse el día de la boda. Si deseas ir a la peluquería, avísanos por email o bien llámanos personalmente al número que aparece en la invitación</p>
                        <h2 align=left>Mándanos un email</h2> 
                     <!-- forma de contacto                                mi boton para español-->
 
                     <!-- He añadido required para que sea necesario meter los datos. Habría que traducirlo con algun script-->
                     <!-- Para evitar que formspree me redirija http://stackoverflow.com/questions/33984667/tryin-to-get-around-the-formspree-redirect-->
 
-                    <div class="row"><h1 class="text-center"><a href="#myModal" role="button" class="btn btn-primary btn-lg" data-toggle="modal">Contáctanos</a></h1></div>
+                    <div class="row"><h1 class="text-center"><a href="#myModal" role="button" class="btn btn-danger btn-lg" data-toggle="modal">Contáctanos</a></h1></div>
 
                     <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -168,7 +168,7 @@
                        <p>&emsp;Istnieje możliwość zapisania się do fryzjera. Dziewczyny jeśli któraś z Was chciałaby pójść do fryzjera napiszcie do nas bądź skontaktujcie się z nami osobiście</p>
                        <h2 align=left>Wyślij do nas zapytanie</h2>                   
                      <!-- forma de contacto                                polaco-->
-                    <div class="row"><h1 class="text-center"><a href="#myModal2" role="button" class="btn btn-primary btn-lg" data-toggle="modal">Kontakt</a></h1></div>
+                    <div class="row"><h1 class="text-center"><a href="#myModal2" role="button" class="btn btn-danger btn-lg" data-toggle="modal">Kontakt</a></h1></div>
 
                     <div id="myModal2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -205,7 +205,7 @@
                                             <button type="submit" class="btn btn-success pull-right"  id="showtoast">Wyślij</button>
                                         </div>
                                         <!-- Avoiding redirect from fromspree-->
-                                        <input type="hidden" name="_next" value="thanks_es.html"/>
+                                        <input type="hidden" name="_next" value="thanks_pl.html"/>
                                     </form>
                                 </div>
 
@@ -223,18 +223,19 @@
 
         <div class="row">
             <div class="col-md-offset-3">
-                <h2  class="gray_with_black_stroke"><br>Ejemplos / po polsku<br></h2>
+                <h2><br><br></h2>
             </div>
+
         </div>
         <div class="row">
             <div class="col-md-5">
                 <div align="center">
-                    <img  class="img-responsive img-rounded" src="img/peinado_1.jpg">                        
+                    <img  class="img-responsive img-rounded" src="../img/peinado_1.jpg">                        
                 </div>
             </div>
             <div class="col-md-offset-1  col-md-5">
                 <div align="center">
-                    <img  class="img-responsive img-rounded" src="img/peinado_2.jpg">                        
+                    <img  class="img-responsive img-rounded" src="../img/peinado_2.jpg">                        
                 </div>
             </div>
         </div>
@@ -248,26 +249,26 @@
     <footer>
         <div class="container text-center">
             <a id="footer_articles" class="page-scroll" href="#page-top" >
-                <p >Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2016 <i class="fa fa-angle-double-up"></i></p>
+                <p>Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2016 <i class="fa fa-angle-double-up"></i></p>
             </a>
         </div>
     </footer>
 
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
+    <script src="../js/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+    <script type="../text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
     <!-- Este script tiene algún tipo de bug con los dropdown menus-->
-    <script src="js/grayscale.js"></script>
+    <script src="../js/grayscale.js"></script>
 
 </body>
 
