--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                         <a class="page-scroll force_collapse" href="#contact">Contacto<br>Kontakt</a>
                     </li>
                     <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Enlaces
-                        <span class="caret"></span></a>
+                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Enlaces<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
-                            <li><a class="links" href="boda-polaca.html">¿Una Boda Polaca?</a></li>
-                            <li><a class="links" href="peluqueria.html">Peluqueria</a></li>
+                            <li><a class="links" href="pages/evento.html">El Evento</a></li>
+                            <li><a class="links" href="pages/boda-polaca.html">¿Una Boda Polaca?</a></li>
+                            <li><a class="links" href="pages/peluqueria.html">Peluquería</a></li>
                             <!-- <li><a href="#">Something else here</a></li> -->
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
@@ -77,12 +77,12 @@
 
                     <!-- PL-->
                      <li>
-                        <a id="enlaces" data-toggle="dropdown" role="button">Linki <br> Informacyjne
-                        <span class="caret"></span></a>
+                        <a id="enlaces" data-toggle="dropdown" role="button"><br>Linki<span class="caret"></span></a>
                         <ul id="ul_enlaces" class="dropdown-menu">
 
-                            <li><a class="links" href="evento.html">El evento</a></li>
-                            <!--  <li><a href="#">Another action</a></li> -->
+                            <li><a class="links" href="pages/evento.html">Wydarzenie</a></li>         
+                            <li><a class="links" href="pages/slub.html">Ślub po Hiszpańsku</a></li>
+                            <li><a class="links" href="pages/peluqueria.html">Fryzjer</a></li>
                             <!-- <li><a href="#">Something else here</a></li> -->
                             <!-- <li role="separator" class="divider"></li>-->
                             <!-- <li><a href="#">Separated link</a></li>-->
@@ -124,7 +124,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <h2 align=left>¡QUERIDOS INVITADOS, OS PRESENTAMOS LA PÁGINA DE NUESTRA BODA!</h2>
-                    <p class="lead" align=left>&emsp;Esta página ha sido creada para toda la famila y amigos con quien queremos compartir la felicidad de un día tan importante como este, nuestro enlace,
+                    <p class="lead text_align_mobile">&emsp;Esta página ha sido creada para toda la famila y amigos con quien queremos compartir la felicidad de un día tan importante como este, nuestro enlace,
                     el cual tendrá lugar el 20 de agosto de <b>2016 en Ełk (pronunciado euk).</b>
                     <br>&emsp;En ésta página encontraréis información de interés que esperamos sea de utilidad para vosotros. En el barra de navegación superior podéis acceder a los diferentes artículos que hemos incluido. Si tenéis alguna pregunta, duda y/o sugerencia, pinchar en <b><i>Contacto</i></b> para mandarnos un email. Os contestaremos a la mayor brevedad posible.
                     </p>
@@ -136,7 +136,7 @@
 
                 <div class="col-md-5">
                     <h2 align=left>DRODZY GOŚCIE, PRZEDSTAWIAMY WAM NASZĄ STRONĘ ŚLUBNĄ!</h2>
-                    <p class="lead" align=left>&emsp;Kochani, strona ta została stworzona z myślą o Was, o naszej rodzinie i przyjaciołach, o naszych bliskich, bo to z Wami chcemy dzielić się radością tego ważnego dla nas dnia, który będzie miał miejsce <b>20 sierpnia 2016 roku w Ełku. </b>
+                    <p class="lead text_align_mobile">&emsp;Kochani, strona ta została stworzona z myślą o Was, o naszej rodzinie i przyjaciołach, o naszych bliskich, bo to z Wami chcemy dzielić się radością tego ważnego dla nas dnia, który będzie miał miejsce <b>20 sierpnia 2016 roku w Ełku. </b>
                     <br>&emsp;W górnym pasku nawigacyjnym strony znajdziecie dostęp do wszystkich przydatnych według nas informacji. Jeśli macie pytania, wątpliwości i/lub sugestie, możecie do nas napisać poprzez zakładkę <b><i>Kontakt</i></b>, za pomocą której można wysłać do nas zapytanie. Obiecujemy odpowiedzieć szybko na Wasze maile.
                     </p>
                 </div>
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <h2 align=left>Mándanos un email</h2>
-                    <p align=left>&emsp;Estamos aquí para ayudar. Si tenéis alguna pregunta o duda pincha aquí para enviarnos un correo electrónico.</p>
+                    <p class="lead text_align_mobile">&emsp;Estamos aquí para ayudar. Si tenéis alguna pregunta o duda pincha aquí para enviarnos un correo electrónico.</p>
 
 
                     <!-- forma de contacto                                mi boton para español-->
@@ -159,7 +159,7 @@
                     <!-- He añadido required para que sea necesario meter los datos. Habría que traducirlo con algun script-->
                     <!-- Para evitar que formspree me redirija http://stackoverflow.com/questions/33984667/tryin-to-get-around-the-formspree-redirect-->
 
-                    <div class="row"><h1 class="text-center"><a href="#myModal" role="button" class="btn btn-primary btn-lg" data-toggle="modal">Contáctanos</a></h1></div>
+                    <div class="row"><h1 class="text-center"><a href="#myModal" role="button" class="btn btn-danger btn-lg" data-toggle="modal">Contáctanos</a></h1></div>
 
                     <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -197,7 +197,7 @@
 
                                         </div>
                                         <!-- Avoiding redirect from fromspree-->
-                                        <input type="hidden" name="_next" value="thanks_es.html"/>
+                                        <input type="hidden" name="_next" value="pages/thanks_es.html"/>
 
                                     </form>
                                 </div>
@@ -215,9 +215,9 @@
 
                 <div class="col-md-5">
                     <h2 align=left>Wyślij do nas zapytanie</h2>
-                    <p align=left>&emsp;Jesteśmy do Waszej dyspozycji. Jeśli macie pytania lub wątpliwości, kliknijcie poniżej, aby wysłać e-mail.</p>
+                    <p class="lead text_align_mobile">&emsp;Jesteśmy do Waszej dyspozycji. Jeśli macie pytania lub wątpliwości, kliknijcie poniżej, aby wysłać e-mail.</p>
                      <!-- forma de contacto                                polaco-->
-                    <div class="row"><h1 class="text-center"><a href="#myModal2" role="button" class="btn btn-primary btn-lg" data-toggle="modal">Kontakt</a></h1></div>
+                    <div class="row"><h1 class="text-center"><a href="#myModal2" role="button" class="btn btn-danger btn-lg" data-toggle="modal">Kontakt</a></h1></div>
 
                     <div id="myModal2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -254,7 +254,7 @@
                                             <button type="submit" class="btn btn-success pull-right"  id="showtoast">Wyślij</button>
                                         </div>
                                         <!-- Avoiding redirect from fromspree-->
-                                        <input type="hidden" name="_next" value="thanks_es.html"/>
+                                        <input type="hidden" name="_next" value="pages/thanks_pl.html"/>
                                     </form>
                                 </div>
 
