--- a/pages/thanks_pl.html
+++ b/pages/thanks_pl.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,13 +12,13 @@
     <title>Historias de una Boda en Polonia</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
    <!-- Custom CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
+    <link href="../css/grayscale.css" rel="stylesheet">
     <!-- toastr CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet"/>
 
@@ -29,7 +30,7 @@
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand page-scroll" href="index.html">
+                <a class="navbar-brand page-scroll" href="../index.html">
                       <span class="light"><i class="fa fa-home"></i>Basia</span><span style="color:red">&hearts;</span>Javy
                 </a>
             </div>
@@ -40,24 +41,40 @@
                 <div class="container">
 
                         <div class="bottom-aligned-text white_with_gray_stroke">
-                            <h2 >¡Gracias por tu e-mail!</h2>
-                            <h2> ¡Responderemos a la mayor brevedad posible!<br><br></h2>
+                            <h2> Dziękujemy za wiadomość!</h2>
+                            <h2> Obiecujemy odpowiedzieć szybko na Wasze maile.!<br><br></h2>
 
                         </div>
                         <div class="col-md-8 col-md-offset-2 ">
-                            <a href="index.html" class="btn btn-circle">
+                            <a href="../index.html" class="btn btn-circle">
                                 <i class="fa fa-angle-double-left animated"></i>
                             </a>
                         </div>
 
                          <div class="col-md-8 col-md-offset-2">
-                             <h5><br> Página principal</h5>
+                             <h5><br> Strona główna</h5>
                         </div>
 
 
                 </div>
             </div>
     </header>
+
+    <!-- jQuery -->
+    <script src="../js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="../js/jquery.easing.min.js"></script>
+
+    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
+    <!-- Este script tiene algún tipo de bug con los dropdown menus-->
+    <script src="../js/grayscale.js"></script>
+
 </body>
 
 </html>
